Might fix the double arrow on Safari

--- a/css/styles.css
+++ b/css/styles.css
@@ -155,6 +155,10 @@ p {
   display: none;
 }
 
+-webkit-details-marker {
+  display: none !important;
+}
+
 .faq-img {
   width: 25rem;
   max-width: 100%;
